13124
When I try to compile the following file:

{code}
package com.sun.test

import java.util.Date
{code}

I get the error message
{code}
comsuntest.scala:3: error: Date is not a member of java.util
import java.util.Date
       ^
one error found
{code}

It should be possible to be able to write new code in com.sun packages, Sun employees do use Scala too :-)
